# CS116-2017-jonathan-haab

./: CMakeLists.txt  README.md  constantes.hpp  constants.hpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  neuronMain.cpp  neuron_unittest.cpp
Neurons_make/: constants.hpp
